--- a/LearnMore/index.html
+++ b/LearnMore/index.html
@@ -24,7 +24,7 @@
         <!--Header to contain the title of the webpage.-->
         <!--Home button to navigate between this page and the home page-->
         <header>
-        <h1 class="jersey-20-regular"> <a href="./Home/index.html" class="Button"> Home</a>More About this Website.</h1>
+        <h1 class="jersey-20-regular"> <a href="../Home/index.html" class="Button"> Home</a>More About this Website.</h1>
         </header>
         <!--section encompassing a table, and a paragraph-->
         <section id="grid">
