--- a/LearnMore/index.html
+++ b/LearnMore/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LearnMore</title>
-    <link href="LearnMore/More.css" rel="stylesheet" >
+    <link href="More.css" rel="stylesheet" >
     <style>
         table, th, td{
             border-collapse: collapse;
