--- a/Home/index.html
+++ b/Home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Home Page</title>
-    <link href="/Home/Home.css" rel="stylesheet" >
+    <link href="Home.css" rel="stylesheet" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Joan&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
             margin-top: 5px;
         }
         /*img {
-            max-width: 650px;  added max to width for more responsiveness
+            max-width: 650px;  added max to width for more responsiveness..
             margin-left: 10px;  }   */
         
             h1{
@@ -51,7 +51,7 @@
    <div class="container">
    <div class="left-section">
         <figure>
-            <img src="Assets/technologyy.png" alt="painted boy seated and surrounded by technological devices">
+            <img src="../Assets/technologyy.png" alt="painted boy seated and surrounded by technological devices">
             <figcaption>Image by <a href="https://pixabay.com/vectors/technology-digital-programming-8490011/">Pixabay</a></figcaption>
         </figure>
     </div>
