--- a/LearnMore/index.html
+++ b/LearnMore/index.html
@@ -15,7 +15,7 @@
             border-width: 2px;
         }
     </style>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com..">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jersey+20&family=Joan&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
@@ -24,7 +24,7 @@
         <!--Header to contain the title of the webpage..-->
         <!--Home button to navigate between this page and the home page-->
         <header>
-        <h1 class="jersey-20-regular"> <a href="index.html" class="Button"> Home</a>More About this Website.</h1>
+        <h1 class="jersey-20-regular"> <a href="../index.html" class="Button"> Home</a>More About this Website.</h1>
         </header>
         <!--section encompassing a table, and a paragraph-->
         <section id="grid">
