--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
         figure{
             float:  left;    /* for figure to cover the left part of th screen*/
             margin: 0 10px 10px 0;
-               
         }
        .container1{
         display: flex;      
@@ -89,9 +88,10 @@
     <!--footer-->
     <footer>
         <em>Contact Us: 403 (000)-1111 </em> 
-         &copy; 2024 AD
+         <div id="Copyright">&copy; 2024 AD</div>
          <strong>Email:daryltchouala8@gmail.com</strong> 
-      </footer>
+    </footer>
+    <script src='Home/Main.js'></script>
    
  </body>
 </html>
