--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <body>
     <!--Header to contain the title of the webpage-->
     <header>
-        <h1 class="jersey-20-regular">Welcome to My Website. <a href="LearnMore/index.html" class="Button"> Learn More</a> <a href="LearnMore/index.html" id="Btn-alert">ClicK Me!</a></h1>
+        <h1 class="jersey-20-regular">Welcome to My Website.<h4 id="Greeting">Salutation</h4> <a href="LearnMore/index.html" class="Button"> Learn More</a> <a href="LearnMore/index.html" id="Btn-alert">ClicK Me!</a></h1>
     </header>
     
     <!--Section to group the content of the webpage. i.e image,paragraph, and list-->
