Update LearnMore file
-Add javascript link to the learnmore file
-Add copyright id in the footer

--- a/LearnMore/index.html
+++ b/LearnMore/index.html
@@ -93,10 +93,11 @@
     
      <!--footer-->
      <footer>
-       <em>Contact Us: 403 (000)-1111 </em> 
-        &copy; 2024 AD
-        <strong>Email:daryltchouala8@gmail.com</strong> 
-     </footer>
+        <em>Contact Us: 403 (000)-1111 </em> 
+         <div id="Copyright">&copy; 2024 AD</div>
+         <strong>Email:daryltchouala8@gmail.com</strong> 
+    </footer>
+    <script  src='/LearnMore/Main.js'></script>
  
 </body>
 </html> 
