--- a/LearnMore/index.html
+++ b/LearnMore/index.html
@@ -73,6 +73,7 @@
         <li>php</li>
         <li>JavaScript</li>     
      </ol>
+     <ol id="numbers"></ol>
      </section>
      
      <section>
@@ -97,7 +98,7 @@
          <div id="Copyright">&copy; 2024 AD</div>
          <strong>Email:daryltchouala8@gmail.com</strong> 
     </footer>
-    <script  src='/LearnMore/Main.js'></script>
+    <script  src='Main.js'></script>
  
 </body>
 </html> 
