--- a/LearnMore/index.html
+++ b/LearnMore/index.html
@@ -98,7 +98,7 @@
          <div id="Copyright">&copy; 2024 AD</div>
          <strong>Email:daryltchouala8@gmail.com</strong> 
     </footer>
-    <script  src='Main.js'></script>
+    <script  src='LearnMore/Main.js'></script>
  
 </body>
 </html> 
